--- a/_config.yml
+++ b/_config.yml
@@ -13,17 +13,15 @@ baseurl: '/online-cv' #change it according to your repository name
 
 
 #Profile information
-name: Alan Doe
+name: Manish Patil
 tagline: Full Stack Developer
 pic: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
 #sidebar links
-email: hello@webjeda.com
-phone: 012 345 6789
-website: blog.webjeda.com #do not add http://
+email: manish4487@gmail.com
+phone: 217 761 7779
 linkedin: alandoe
-github: sharu725
-twitter: '@webjeda'
+github: manish4487
 
 
 # Tracker
